--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,5 @@
       </agm-direction>
   </agm-map>
   <h3> {{indication}}</h3>
-  <button (click)='getDirection()'> start </button>
+  <button (click)='start()'> start </button>
  
